--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ const sentences = [
         "start": 35.351667,
         "end": 36.051667,
         "correctAnswer": "Em.",
-        "translation": "弟弟／妹妹；我（对比自己年龄稍大的人的自称）。",
+        "translation": "弟弟／妹妹。",
         "options": [
             "Yêm.",
             "En.",
@@ -732,7 +732,7 @@ const sentences = [
         "start": 69.691667,
         "end": 70.301667,
         "correctAnswer": "Rất.",
-        "translation": "很；非常。",
+        "translation": "很",
         "options": [
             "Rết.",
             "Rát.",
@@ -784,7 +784,7 @@ const sentences = [
         "start": 74.881667,
         "end": 76.731667,
         "correctAnswer": "Rất vui được làm quen với em.",
-        "translation": "很高兴认识你(对比自己年龄稍小的人)。",
+        "translation": "很高兴认识你(弟弟/妹妹)。",
         "options": [
             "Rất vui được làm quen vói em.",
             "Rất vui được lam quen với em.",
@@ -797,7 +797,7 @@ const sentences = [
         "start": 78.081667,
         "end": 79.441667,
         "correctAnswer": "Rất vui được gặp anh.",
-        "translation": "很高兴见到你（对比自己年龄稍大的男性,或纯属礼貌）。",
+        "translation": "很高兴见到你（哥哥）。",
         "options": [
             "Rất vui được gặp ạnh.",
             "Rất vui được gập anh.",
@@ -823,7 +823,7 @@ const sentences = [
         "start": 82.801667,
         "end": 84.221667,
         "correctAnswer": "Rất vui được gặp chị.",
-        "translation": "很高兴见到你（对女士）。",
+        "translation": "很高兴见到你（姐姐）。",
         "options": [
             "Rất vui được gặp chi.",
             "Rất vui được gạp chị.",
@@ -836,7 +836,7 @@ const sentences = [
         "start": 85.041667,
         "end": 86.411667,
         "correctAnswer": "Rất vui được gặp ông.",
-        "translation": "很高兴见到您（对年长男性,或纯属礼貌）。",
+        "translation": "很高兴见到您（爷爷）。",
         "options": [
             "Rất vui được gập ông.",
             "Rất vui được gặp ổng.",
@@ -849,7 +849,7 @@ const sentences = [
         "start": 86.971667,
         "end": 88.401667,
         "correctAnswer": "Rất vui được gặp bà.",
-        "translation": "很高兴见到您（对年长女性, 或纯属礼貌）。",
+        "translation": "很高兴见到您（奶奶）。",
         "options": [
             "Rất vui được gập bà.",
             "Rất vui được gặp bả.",
